--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html,body{
 	width: 100%;
 	height: 100%;
 	overflow: hidden;/*隐藏滚动条*/
-	position:relative;
+
 }
 #main{
 	width: 640px;
@@ -28,13 +28,16 @@ html,body{
 #main ul li{
 	width: 100%;
 	height: 100%;
-	position: relative;
+	position: absolute;
 	overflow: hidden;
+	display:none;
 
 }
+
 #main ul li:nth-child(1){/*1.ul下的第一个子元素 2.这个子元素标记名是li*/
 	background:#141d25;
 	background-size:100% 100%;
+	display:block;
 
 }
 #main ul li:nth-child(2){/*1.ul下的第一个子元素 2.这个子元素标记名是li*/
@@ -57,7 +60,7 @@ html,body{
 	background-size:100% 100%;
 
 }
-
+#list > li.zIndex{ z-index:6;}
 .centerRotate {
 	position:absolute;
 	left:50%;
@@ -413,4 +416,61 @@ last*/
 	background-size:100% 100%;
 	-webkit-animation: rollIn 1s linear 0.3s 1 both;
 	animation: rollIn 1s linear 0.3s 1 both;
+}
+#arrow{width:3rem; position:absolute; left:50%; bottom:.8rem; z-index:99; margin-left:-1.5rem; animation:1s infinite arrowTop; -webkit-animation:1s infinite arrowTop;}
+@-webkit-keyframes arrowTop{
+	0%{ opacity:0; -webkit-transform:translate(0,0);}
+	60%{ opacity:1; -webkit-transform:translate(0,-10px);}
+	100%{ opacity:0; -webkit-transform:translate(0,-30px);}
+}
+@keyframes arrowTop{
+	0%{ opacity:0; transform:translate(0,0);}
+	60%{ opacity:1; transform:translate(0,-10px);}
+	100%{ opacity:0; transform:translate(0,-30px);}
+}
+/*
+music*/
+.music {
+	display: none;
+	position: absolute;
+	top: 20px;
+	right: 20px;
+
+	width: 36px;
+	height: 36px;
+	background: url("../audioFile/music.svg") no-repeat;
+	background-size: 100% 100%;
+}
+
+.musicMove {
+	-webkit-animation: musicMove 1s linear 0s infinite;
+	animation: musicMove 1s linear 0s infinite;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
+}
+
+@-webkit-keyframes musicMove {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes musicMove {
+	0% {
+		-webkit-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+
+.music audio {
+	display: none;
 }
